# sync_msteams_jira_comments

./: .gitignore  Cargo.toml  LICENSE  README.md  backend.sh  build.sh
deploy/: .env_example  sync_msteams_jira_comments.service  sync_msteams_jira_comments.sh
src/: cfg.rs  lib.rs  utils.rs
src/jira_api/: attachment.rs  cfg.rs  comment.rs  comment_v3.rs  issue.rs  mod.rs  model.rs  user.rs
src/ms_graph_api/: cfg.rs  delegated_token.rs  image.rs  message.rs  mod.rs  model.rs  subscription.rs  token.rs
src/server/: cfg.rs  error.rs  headers.rs  mod.rs  server.rs
src/server/handlers/: helpers.rs  jira.rs  mod.rs  ms_oauth.rs  teams.rs  teams_lifecycle.rs
