[package]
name = "sync_msteams_jira_comments"
version = "0.1.0"
edition = "2021"

[dependencies]
Markdown-to-HTML-rs = "0.1"
anyhow = "1.0"
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
envconfig = "0.10"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
hex = "0.4"
hmac = "0.12"
html2md = "0.2.14"
htmltoadf = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1" }
regex = "1.10"
reqwest = { version = "0.11", features = ["rustls-tls", "cookies", "gzip", "json", "multipart"] }
rustls-pemfile = "1.0"
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
tower = { version = "0.4", features = ["make"] }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["fs", "compression-gzip"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
validator = { version = "0.17.0", features = ["derive"] }
