[package]
name = "sync_msteams_jira_comments"
version = "0.1.0"
edition = "2021"

[dependencies]
adf2html = "0.2.2"
anyhow = "1.0.91"
axum = "0.7.5"
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
envconfig = "0.10.0"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false }
hex = "0.4.3"
hmac = "0.12.1"
html2md = "0.2.14"
htmltoadf = "0.1.10"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7" }
markdown_to_html_parser = "0.1.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["rustls-tls", "cookies", "gzip", "json", "multipart"] }
rustls-pemfile = "1.0"
scraper = "0.20.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
time = "0.3.36"
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls = "0.25"
tower = { version = "0.4", features = ["make"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs", "compression-gzip"] }
tower-service = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
