[package]
name = "sync_msteams_jira_comments"
version = "0.1.0"
edition = "2024"

[dependencies]
adf2html = "0.2.2"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
envconfig = "0.11.0"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
html2md = "0.2.14"
regex = "1.10.6"
reqwest = { version = "0.12.20", features = ["rustls-tls", "cookies", "gzip", "json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.5.2", features = ["fs", "compression-gzip"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
